# ninja-portal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml  env.example  pyproject.toml
api_gateway/: api.py  asgi.py  settings.py  urls.py  utils.py
apps/gateway/: admin.py  apps.py  data_types.py  models.py  routing_state.py  services.py  signals.py  tests.py  token_utils.py  update_patterns.py  utils.py  views.py
apps/gateway/infrastructure/: http_client.py
apps/gateway/migrations/: 0001_initial.py  0002_alter_uripattern_unique_together.py  0003_uripattern_is_active.py  0004_upstream_uripattern_upstream.py
